--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,5 +22,5 @@
 en:
   event_list: Event List
   admin:
-    event_list: Admin Event List 
-  hello: "Hello world"
+    event_list: Admin Event List
+  hello: "Hi %{name},"
