config Time.zone with user.time_zone

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,7 @@ en:
     brand: FullStack Rails Recipes User Console
     events: Events
     console: User Console
+    edit_profile: Edit Profile
     reset_password: Reset Password
     sign_up: Sign Up
     sign_in: Login
