--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,11 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  event:
+    status:
+      draft: DRAFT
+      public: PUBLIC
+      priate: PRIVATE
   navbar:
     brand: FullStack Rails Recipes User Console
     events: Events
