--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -3,7 +3,7 @@ zh-CN:
     status:
       draft: 草稿
       public: 公开
-      priate: 私密
+      private: 私密
   navbar:
     brand: 全栈营 Rails Recipes 前台
     events: 活动一览
