--- a/config/locales/events.yml
+++ b/config/locales/events.yml
@@ -1,7 +1,10 @@
+# validation 验证失败时，在提示信息中显示。
+# eg：活动名称不能为空字符
+
 zh-CN:
   activerecord:
     attributes:
       event:
         name: "活动名称"
         description: "描述"
-        
+        status: 活动状态
