add users/index.html.erb and add class active to navbar links

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,7 @@ en:
     navbar:
       brand: FullStack Rails Recipes User Admin Console
       events: Events
+      users: Users Manage
       console: Admin Console
     event_list: Admin Event List
   hello: "Hi %{name},"
