--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -18,6 +18,7 @@ zh-CN:
     navbar:
       brand: 全栈营 Rails Recipes 后台
       events: 活动管理
+      users: 用户管理
       console: 管理员面板
     event_list: 活动列表管理
   hello: "亲～ %{name} 你好："
