bulk update, params[:commit], params[:event_status], params[:ids[]], select_tag, options_for_select, name, value

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,8 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  bulk_update: Bulk Update
+  bulk_delete: Bulk Delete
   event:
     status:
       draft: DRAFT
