--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,14 @@ en:
     sign_out: Logout
   event_list: Event List
   admin:
+    new_event: New Event
+    submit_filter: Submit Filter
+    top: Top 
+    bottom: Bottom
+    edit: Edit
+    delete: Delete
+    registrations: Registrations
+    tickets: Tickets
     navbar:
       brand: FullStack Rails Recipes User Admin Console
       events: Events
