--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -22,6 +22,14 @@ zh-CN:
     sign_out: 登出
   event_list: 活动列表
   admin:
+    new_event: 新建活动
+    submit_filter: 送出筛选
+    top: 置顶
+    bottom: 置底
+    edit: 修改
+    delete: 删除
+    registrations: 注册者
+    tickets: 票型
     navbar:
       brand: 全栈营 Rails Recipes 后台
       events: 活动管理
