add event_attachment routing, link, controller and pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,6 +64,7 @@ en:
     delete: Delete
     registrations: Registrations
     tickets: Tickets
+    attachments: Attachments
     navbar:
       brand: FullStack Rails Recipes User Admin Console
       events: Events
